# claco

./: .cargo_vcs_info.json  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.zh.md  install.sh  test.sh
.cargo/: config.toml
.claude/commands/: git-status.md  project-progress.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  post-release.yml
context/: plan.md  plan.v2.md
src/: claude.rs  claude_cli.rs  cli.rs  config.rs  lib.rs  main.rs
src/commands/: agents.rs  history.rs  hooks.rs  mod.rs  projects.rs  session.rs  settings.rs  slash_commands.rs
