[package]
name = "claco"
version = "0.1.0"
edition = "2021"
authors = ["Kai Chen <kai@thekaiway.com>"]
description = "Claude Code CLI Inspector - inspect Claude Code sessions and project data"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "5.0"
dirs = "5.0"
regex = "1.10"
