[package]
name = "claco"
version = "0.2.5"
edition = "2021"
authors = ["Kai Chen <kai@thekaiway.com>"]
description = "Claude Code CLI Inspector - inspect Claude Code sessions and project data"
license = "MIT"
repository = "https://github.com/kaichen/claco"
homepage = "https://github.com/kaichen/claco"
readme = "README.md"
keywords = ["claude", "cli", "inspector", "development-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "claco"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "5.0"
dirs = "5.0"
regex = "1.10"
chrono = "0.4"
reqwest = "0.11"
url = "2.0"
base64 = "0.21"
