[package]
name = "claco"
version = "2.0.0"
edition = "2021"
authors = ["Kai Chen <kai@thekaiway.com>"]
description = "a CLI tool for boosting Claude Code productive."
license = "MIT"
repository = "https://github.com/kaichen/claco"
homepage = "https://github.com/kaichen/claco"
readme = "README.md"
keywords = ["claude", "cli", "claude-code", "development-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "claco"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "5.0"
dirs = "5.0"
regex = "1.10"
chrono = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
url = "2.0"
base64 = "0.21"
jsonpath-rust = "0.3"

[dev-dependencies]
tempfile = "3.8"
